fixed spacing in personal-description

--- a/react-portfolio-project/src/App.css
+++ b/react-portfolio-project/src/App.css
@@ -401,8 +401,8 @@ a:hover {
   display: flex;
   font-size: 23px;
   width: 800px;
-  margin: 30px;
-  padding: 30px;
+  /* margin: 30px; */
+  padding: 50px;
   /* border: 5px white solid; */
   /* border-radius: 20px; */
 }
